chore: add MCP and OpenCode config files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,7 @@ coverage/
 # Added by Homey CLI
 /.homeybuild/
 .playwright-mcp/
+
+# MCP and OpenCode configuration (contains secrets)
+.claude/mcp.json
+opencode.json
